cmake_minimum_required(VERSION 3.7)
project(finalC)

set(CMAKE_C_STANDARD 99)

set(SOURCE_FILES 30-07-2013/ejercicio-7/ejercicio7.c 30-07-2013/ejercicio-1/ejercicio1-3.c 14-07-2016/_Email.cpp 14-07-2016/_Email.h 14-07-2016/ejercicio-10/ejercicio_10_darius.c 19-02-2015/ejercicio-3/ejercicio-3.c 19-02-2015/ejercicio-3/ejercicio-3-rehecho.c 26-12-2012/ejercicio-7/ejercicio7.c 14-12-2012/ejercicio-4/ejercicio-4.c 14-07-2016/ejecución_overdoaling.cpp)
add_executable(finalC ${SOURCE_FILES})

